add requests, fix contracts, and ya blya sosal((
